tenzir/functional-test/data/reference/pipelines_local/test_Parse_KV/step_01.ref
error: regex must have at most one capturing group
 --> <input>:1:15
  |
1 | parse line kv "(foo)(bar)" ""
  |               ^^^^^^^^^^^^ 
  |
  = docs: https://docs.tenzir.com/docs/next/formats/kv